--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@ Styling pages:<br/>
 	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
 	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
 	<li><a class='hl' href="files/rtf.html">Rich Text Editor</a></li>
-	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 </ul>
-Utilities:<br/>
+Languages:<br/>
 <ul>
-	<li><a class='hl' href="files/EUR_USD_Rates.html">EUR:USD Exchange Rates</a></li>
+	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 	<li><a class='hl' href="files/aENG.html">English phrasebook</a></li>
 	<li><a class='hl' href="files/aGER.html">German phrasebook</a></li>
 </ul>
 Cloud pages:<br/>
 <ul>
+	<li><a class='hl' href="files/EUR_USD_Rates.html">EUR:USD Exchange Rates</a></li>
 	<li><a class='hl' href="http://the-postviorel.rhcloud.com">Red Hat (Linux) OpenShift</a></li>
 	<li><a class='hl' href="http://companywf.appspot.com/">Company WorkFlow, Google AppEngine Cloud/Java</a></li>
 	<li><a class='hl' href="http://specialposting.appspot.com/">Special Posting, Google AppEngine Cloud/Java</a></li>
