--- a/files/aENG.html
+++ b/files/aENG.html
@@ -20,7 +20,7 @@ function setInt() {
 			INDX.push(bool[x]);
 			bool.splice(x,1);
 		}
-	onCh(); GT();
+	if_auto = true; onCh(); GT();
 }
 function GT(){ divId.innerText = txt[Rot()]; }
 
