--- a/files/aGER.html
+++ b/files/aGER.html
@@ -20,7 +20,7 @@ function setInt() {
 			INDX.push(bool[x]);
 			bool.splice(x,1);
 		}
-	onCh(); GT();
+	if_auto = true; onCh(); GT();
 }
 function GT(){
 	var x = txt[Rot()].split('@'); divId.innerText = x[0];
