--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -46,7 +46,7 @@ function Receive() {
 
 var isDirty = false;
 window.addEventListener("beforeunload", function(e) {
-    var cMes = 'Au fost modificat text!';
+    var cMes = 'Au fost modificari la text!';
     if (!isDirty) return undefined;
     (e || window.event).returnValue = cMes; //Gecko + IE
     return cMes; //Gecko + Webkit, Safari, Chrome etc.
@@ -55,9 +55,12 @@ window.addEventListener("beforeunload", function(e) {
 
 </head>
 <body onLoad='Receive()'>
+<INPUT class='Inp' type='button' value='Go to Bottom' onClick='window.scrollTo(0,document.body.scrollHeight)'/><br>
+	
 <DIV id='Continut' contentEditable='true' onInput="isDirty=true;"></DIV>
 <hr>
 <INPUT id='out' class='Inp' type='button' value='Save Content' onClick='rSave()'/>
 <a href='down/eng.txt' class='Inp'>Download eng.txt</a>
+<INPUT class='Inp' type='button' value='Go to Top' onClick='window.scrollTo(0,0)'/>
 </body>
 </html>
