--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Languages:<br/>
 	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 	<li><a class='hl' href="files/aENG.html">English phrasebook</a></li>
 	<li><a class='hl' href="files/aGER.html">German phrasebook</a></li>
+	<li><a class='hl' href="files/_ENG.txt">Narrated plain text</a></li>
 </ul>
 Cloud pages:<br/>
 <ul>
