--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Styling pages:<br/>
 	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
 	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
 	<li><a class='hl' href="files/rtf.html">Rich Text Editor</a></li>
+	<li><a class='hl' href="files/newPDF.html">PDF Editor</a></li>
 </ul>
 Languages:<br/>
 <ul>
