--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -525,8 +525,8 @@ var Mng = {
 
   table[name=addrTable] { font:normal 10pt Helvetica,"DejaVu Sans",Arial; border-bottom:8px solid #ccccff; }
   table[name=remTable] { font:normal 10pt Helvetica,"DejaVu Sans",Arial; background-color: #eeeeff; color:#606090; border-radius:8px; border:1px solid #ddddff; }
-  .quoteFirstCell { font: normal 56pt Times; color: #ccccff; border-right: 1px solid #ccccff; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
-  .quoteSecondCell { font: italic 12pt Times; padding: 8px; }
+  .quoteFirstCell { font: normal 56pt Helvetica,"DejaVu Sans",Arial; color: #ccccff; border-right: 1px solid #ccccff; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .quoteSecondCell { font: italic 10pt Helvetica,"DejaVu Sans",Arial; padding: 8px; }
   </pre>
   <pre id="Georgia">
   body { font: normal 12pt "Century Schoolbook L",Times,FreeSerif,"Times New Roman"; }
@@ -542,8 +542,8 @@ var Mng = {
 
   table[name=addrTable] { font:normal 12pt "Century Schoolbook L",Times,FreeSerif,"Times New Roman"; border-bottom:8px solid #ffbb66; }
   table[name=remTable] { font:normal 12pt "Century Schoolbook L",Times,FreeSerif,"Times New Roman"; color:brown; background-color: #ffeebb; border-radius:8px; border:1px solid #f0e0b0; }
-  .quoteFirstCell { font: normal 56pt Times; color: #ffbb66; border-right: 1px solid #ffbb66; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
-  .quoteSecondCell { font: italic 12pt Times; padding: 8px; }
+  .quoteFirstCell { font: normal 56pt "Century Schoolbook L",Times,FreeSerif,"Times New Roman"; color: #ffbb66; border-right: 1px solid #ffbb66; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .quoteSecondCell { font: italic 12pt "Century Schoolbook L",Times,FreeSerif,"Times New Roman"; padding: 8px; }
   </pre>
   <pre id="Verdana">
   body { font: normal 10pt "Nimbus Sans L",Helvetica,Sans-serif; }
@@ -559,8 +559,8 @@ var Mng = {
 
   table[name=addrTable] { font:normal 10pt "Nimbus Sans L",Helvetica,Sans-serif; border-bottom:8px solid #cceea0; }
   table[name=remTable] { font:normal 10pt "Nimbus Sans L",Helvetica,Sans-serif; color: darkgreen; background-color: #eeffdd; border-radius:8px; border:1px solid #ddeed0; }
-  .quoteFirstCell { font: normal 56pt Times; color: #cceea0; border-right: 1px solid #cceea0; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
-  .quoteSecondCell { font: italic 12pt Times; padding: 8px; }
+  .quoteFirstCell { font: normal 56pt "Nimbus Sans L",Helvetica,Sans-serif; color: #cceea0; border-right: 1px solid #cceea0; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .quoteSecondCell { font: italic 10pt "Nimbus Sans L",Helvetica,Sans-serif; padding: 8px; }
   </pre>
   <pre id="Normal">
   body { font: normal 11pt "URW Palladio L",Times,"Times New Roman"; }
@@ -573,8 +573,8 @@ var Mng = {
 
   table[name=addrTable] { font:normal 11pt "URW Palladio L",Times,"Times New Roman"; border-bottom:8px solid lightgray; }
   table[name=remTable] { font:normal 11pt "URW Palladio L",Times,"Times New Roman"; background-color: lightgray; border-radius:8px; border:1px solid gray; }
-  .quoteFirstCell { font: normal 56pt Times; color: lightgray; border-right: 1px solid lightgray; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
-  .quoteSecondCell { font: italic 12pt Times; padding: 8px; }
+  .quoteFirstCell { font: normal 56pt "URW Palladio L",Times,"Times New Roman"; color: lightgray; border-right: 1px solid lightgray; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .quoteSecondCell { font: italic 11pt "URW Palladio L",Times,"Times New Roman"; padding: 8px; }
   </pre>
   <pre id="Custom"></pre>
 </div>
