--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -229,10 +229,16 @@ function htmlPrepare() {
   } catch(e) { alert('Error: ' + e.message); }
 }
 
-var _release = null;
+/*var _release = null;
 function release(o, fl){
   if(fl) { if(_release) return; o.style.backgroundColor = 'lightgreen'; _release = window.setTimeout(release, 400, o, false); }
   else { o.style.backgroundColor = ''; window.clearTimeout(_release); _release = null; }
+}*/
+
+function release(o, fl){
+  var W = o.getAttribute('rel');
+  if(fl) { if(W && W>=0) return; o.style.backgroundColor = 'lightgreen'; o.setAttribute('rel', window.setTimeout(release, 400, o, false)); }
+  else { o.style.backgroundColor = ''; window.clearTimeout(W); o.setAttribute('rel', null); }
 }
 
 function upperCase(F) {
