--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -601,7 +601,8 @@ var Mng = {
   .htmlBody {background-color:#ffeebb;border:1px solid #f0e0b0;border-radius:8px;padding:12px;}
   </pre>
   <pre id="Verdana">
-  body { font: normal 11pt "URW Palladio L","Palatino Linotype",Palatino; }
+  body { font: normal 11pt Utopia,"URW Palladio L","Palatino Linotype",Palatino; }
+  td { font: normal 11pt Utopia,"URW Palladio L","Palatino Linotype",Palatino; vertical-align: top; }
   h1 { color: white;background-color: #338844;border-radius:8px;padding:8px; font-size: 20pt; font-weight:bold; border:1px solid #308040; margin:0px; }
   h2 { color: darkgreen;background-color: #eeffdd; border-radius:8px;padding:8px; font-size: 16pt; font-weight:normal; border:1px solid #ddeed0; margin:0px; }
   b { border: 1px solid #cceea0; background-color: white;padding-left:4px;padding-right:4px; border-radius:6px; font-weight:normal; }
@@ -609,12 +610,13 @@ var Mng = {
   u { border-bottom: 2px solid #cceea0; text-decoration:none; }
   hr { border:none; border-top:1px dashed #b0e090; height:0px; }
   sup { color:green; font:bold 10px Sans-Serif; }
-  td { vertical-align: top; }
 
-  table[name=addrTable] { font:normal 11pt "URW Palladio L","Palatino Linotype",Palatino; border-bottom:8px solid #cceea0; }
-  table[name=remTable] { font:normal 11pt "URW Palladio L","Palatino Linotype",Palatino; color: darkgreen; background-color: #eeffdd; border-radius:8px; border:1px solid #ddeed0; }
-  .quoteFirstCell { font: normal 56pt "URW Palladio L","Palatino Linotype",Palatino; color: #cceea0; border-right: 1px solid #cceea0; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
-  .quoteSecondCell { font: italic 11pt "URW Palladio L","Palatino Linotype",Palatino; padding: 8px; }
+  table[name=addrTable] { border-bottom:8px solid #cceea0; }
+  table[name=remTable] { color: darkgreen; background-color: #eeffdd; border-radius:8px; border:1px solid #ddeed0; }
+  .quoteFirstCell { font-size: 56pt; color: #cceea0; border-right: 1px solid #cceea0; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .quoteSecondCell { padding: 8px; font-style:italic; }
+  .XquoteFirstCell { font: normal 56pt "URW Palladio L","Palatino Linotype",Palatino; color: #cceea0; border-right: 1px solid #cceea0; padding: 8px; padding-top:0px; text-align: right; width: 70px; }
+  .XquoteSecondCell { font: italic 11pt "URW Palladio L","Palatino Linotype",Palatino; padding: 8px; }
   .htmlBody {background-color:#eeffdd;border:1px solid #ddeed0;border-radius:8px;padding:12px;}
   </pre>
   <pre id="Normal">
